# ternroute

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  app.js  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  styles.css  vercel.json
.github/workflows/: publish-image.yml  test.yml
api/: route.py
app/: __init__.py  agent.py  config.py  contracts.py  errors.py  fireworks_client.py  main.py  model_profiles.py  output_spec.py  prompts.py  task_analysis.py  telemetry.py  validators.py
app/solvers/: __init__.py
examples/: tasks.json
presentation/remotion/: README.md  TRANSCRIPT.md  package-lock.json  package.json  tsconfig.json
presentation/remotion/src/: index.tsx
scripts/: verify_output.py
tests/: test_agent.py  test_analysis.py  test_client.py  test_config.py  test_contracts.py  test_demo_api.py  test_model_profiles.py
