[project]
name = "ternroute"
version = "0.1.0"
description = "Proof-gated token-efficient routing agent"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Noizrom" }]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
